# env-searcher

./: .env  Cargo.toml  README.md
src/: lib.rs
